Fixing header clipping issue

--- a/public/design/css/style.css
+++ b/public/design/css/style.css
@@ -681,7 +681,6 @@ img {
 
 
 .main-header {
-	position: absolute;
 	left: 0px;
 	right: 0px;
 	display: block;
